[gd_scene load_steps=4 format=2]

[ext_resource path="res://arts/abstrastArt/bossbullet.png" type="Texture" id=1]
[ext_resource path="res://objects/weapons/BasicBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 45.2769

[node name="BasicBullet" type="RigidBody2D" groups=["bullet", "style"]]
collision_layer = 4
collision_mask = 3
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="Style0" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Style0"]
texture = ExtResource( 1 )

[node name="Style1" type="Node2D" parent="."]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Style1"]
color = Color( 0.145098, 0.901961, 0.509804, 1 )
polygon = PoolVector2Array( 6, 20, -17, 25, -28, -7, -8, -30, 39, -7 )

[node name="Style2" type="Node2D" parent="."]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Style2"]
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -15, 16, -15, -13, 21, -3 )

[node name="Style3" type="Node2D" parent="."]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Style3"]
polygon = PoolVector2Array( 0, 0, -28, -24, 23, -4, 17, 23, -8, 12, -37, 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
